--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
