--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "hono": "^4.7.4",
     "node-fetch": "^3.3.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
